# patchMatch

./: .gitignore  .travis.yml  CMakeLists.txt  ExhaustivePatchMatch.cpp  ExhaustivePatchMatch.h  README.md  RandomizedPatchMatch.cpp  RandomizedPatchMatch.h  main.cpp
src/: ExhaustivePatchMatch.cpp  ExhaustivePatchMatch.h  HoleFilling.cpp  HoleFilling.h  OffsetMap.cpp  OffsetMap.h  Poisson.h  PoissonSolver.h  RandomizedPatchMatch.cpp  RandomizedPatchMatch.h  TrivialReconstruction.cpp  TrivialReconstruction.h  VotedGradientReconstruction.cpp  VotedGradientReconstruction.h  VotedReconstruction.cpp  VotedReconstruction.h  main.cpp  main_hole_filling.cpp  main_hole_filling.cxx  main_reconstruction.cpp  main_reconstruction.cxx  main_seamless_clone.cxx  util.h
src/patch_match_provider/: ExhaustivePatchMatch.h  ParallelMergeOffsetMaps.h  PatchMatchProvider.h  RandomizedPatchMatch.cpp  RandomizedPatchMatch.h
src/patch_match_provider/cpu/: ExhaustivePatchMatch.cpp  ExhaustivePatchMatch.h
src/patch_match_provider/gpu/: ExhaustivePatchMatch.cpp  ExhaustivePatchMatch.h
src/poisson_solver/: Backend.cpp  Backend.hpp  BackendCUDA.cu  BackendCUDA.hpp  BackendOpenMP.cpp  BackendOpenMP.hpp  CommandLine.cpp  CommandLine.hpp  Defs.cpp  Defs.hpp  ImagePfmIO.cpp  ImagePfmIO.hpp  Solver.cpp  Solver.hpp
tests/: ExhaustivePatchMatchTest.cpp  HoleFillingTest.cpp  OffsetMapTest.cpp  PerformanceTest.cpp  PoissonSolverTest.cpp  RandomizedPatchMatchTest.cpp  UtilityTest.cpp  test_main.cpp
